Updated build scripts

--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,10 @@ buildscript {
     }
 }
 
+subprojects {
+    tasks.withType(Javadoc).all { enabled = false }
+}
+
 allprojects {
     repositories {
         jcenter()
