--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,18 @@
 .gradle
 /local.properties
 /.idea/workspace.xml
+/.idea/tasks.xml
 /.idea/libraries
+# Sensitive or high-churn files:
+/.idea/dataSources/
+/.idea/dataSources.ids
+/.idea/dataSources.xml
+/.idea/dataSources.local.xml
+/.idea/sqlDataSources.xml
+/.idea/dynamic.xml
+/.idea/uiDesigner.xml
 .DS_Store
 /build
 /captures
 .externalNativeBuild
+/bintray.properties
