--- a/build.gradle
+++ b/build.gradle
@@ -1,30 +1,51 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
+group 'com.dr'
+version '1.0.1-SNAPSHOT'
 
 buildscript {
     ext.kotlin_version = '1.0.5-2'
+
     repositories {
         jcenter()
+        mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.2.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.novoda:bintray-release:0.4.0'
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
     }
 }
 
-subprojects {
-    tasks.withType(Javadoc).all { enabled = false }
+apply plugin: 'java'
+apply plugin: 'kotlin'
+apply plugin: 'com.novoda.bintray-release'
+
+sourceCompatibility = 1.6
+
+repositories {
+    mavenCentral()
 }
 
-allprojects {
-    repositories {
-        jcenter()
-    }
+dependencies {
+    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    testCompile group: 'junit', name: 'junit', version: '4.11'
+    compile 'com.fasterxml.jackson.core:jackson-databind:2.8.5'
+    compile 'javax.validation:validation-api:1.1.0.Final'
 }
 
-task clean(type: Delete) {
-    delete rootProject.buildDir
+def bintrayProperties = new Properties()
+def bintrayPropertiesFile = rootProject.file("bintray.properties")
+if (bintrayPropertiesFile.exists()) (
+        bintrayProperties.load(new FileInputStream(bintrayPropertiesFile))
+)
+
+publish {
+    userOrg = 'com-dr'
+    repoName = 'dr-public'
+    groupId = 'com.dr'
+    artifactId = 'ktjsonschema'
+    publishVersion = '1.0.1'
+    uploadName = 'KtJsonSchema'
+    desc = 'Generate JSON Schema draft 4 with Polymorphism using Jackson annotations'
+    website = 'https://github.com/roee88/kt-jackson-jsonSchema'
+    bintrayUser = bintrayProperties.getProperty('bintrayUser', '')
+    bintrayKey = bintrayProperties.getProperty('bintrayKey', '')
 }
