--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
     compile 'com.fasterxml.jackson.core:jackson-databind:2.8.5'
     compile 'javax.validation:validation-api:1.1.0.Final'
+    testCompile 'com.github.joschi.jackson:jackson-datatype-threetenbp:2.8.4'
 }
 
 def bintrayProperties = new Properties()
