--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,15 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
     compile 'com.fasterxml.jackson.core:jackson-databind:2.8.5'
     compile 'javax.validation:validation-api:1.1.0.Final'
+
     testCompile 'com.github.joschi.jackson:jackson-datatype-threetenbp:2.8.4'
+    testCompile 'ch.qos.logback:logback-classic:1.1.3'
+    testCompile 'com.github.fge:json-schema-validator:2.2.6'
+    testCompile 'com.fasterxml.jackson.module:jackson-module-kotlin:2.8.5'
+    testCompile 'com.fasterxml.jackson.datatype:jackson-datatype-jdk8:2.8.5'
+    testCompile 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.8.5'
+    testCompile 'com.fasterxml.jackson.datatype:jackson-datatype-joda:2.8.5'
+    testCompile 'joda-time:joda-time:2.9.4'
 }
 
 def bintrayProperties = new Properties()
