--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 group 'com.dr'
-version '1.0.1-SNAPSHOT'
+version '1.0.2'
+description 'Generate JSON Schema draft 4 with Polymorphism using Jackson annotations'
 
 buildscript {
     ext.kotlin_version = '1.0.5-2'
@@ -26,10 +27,10 @@ repositories {
 
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    testCompile group: 'junit', name: 'junit', version: '4.11'
     compile 'com.fasterxml.jackson.core:jackson-databind:2.8.5'
     compile 'javax.validation:validation-api:1.1.0.Final'
 
+    testCompile group: 'junit', name: 'junit', version: '4.11'
     testCompile 'com.github.joschi.jackson:jackson-datatype-threetenbp:2.8.4'
     testCompile 'ch.qos.logback:logback-classic:1.1.3'
     testCompile 'com.github.fge:json-schema-validator:2.2.6'
@@ -49,12 +50,12 @@ if (bintrayPropertiesFile.exists()) (
 publish {
     userOrg = 'com-dr'
     repoName = 'dr-public'
-    groupId = 'com.dr'
-    artifactId = 'ktjsonschema'
-    publishVersion = '1.0.1'
     uploadName = 'KtJsonSchema'
-    desc = 'Generate JSON Schema draft 4 with Polymorphism using Jackson annotations'
+    groupId = project.group
+    artifactId = project.name
+    publishVersion = project.version
+    desc = project.description
     website = 'https://github.com/roee88/kt-jackson-jsonSchema'
-    bintrayUser = bintrayProperties.getProperty('bintrayUser', '')
-    bintrayKey = bintrayProperties.getProperty('bintrayKey', '')
+    bintrayUser = bintrayProperties.getProperty('bintrayUser', 'noUser')
+    bintrayKey = bintrayProperties.getProperty('bintrayKey', 'noKey')
 }
